# njupt_smartclass_downloader_webui

./: .gitignore  README.md  SmartClassDownloader.spec  _patch2.py  _patch3.py  _patch_final.py  _patch_task_manager.py  build_nuitka.py  pyproject.toml
app/: server.py
app/src/api/: __init__.py  auth.py  config.py  plugins.py  tasks.py  videos.py
app/src/core/: __init__.py  backup_auth.py  backup_njupt_sso.py  backup_smartclass_client.py  njupt_sso.py  session_manager.py  smartclass_client.py
app/src/models/: __init__.py  models.py
app/src/plugins/: __init__.py  plugin_manager.py
app/src/services/: __init__.py  download_service.py  ppt_service.py  task_manager.py  transcribe_service.py
app/src/utils/: __init__.py  config_manager.py  disk_checker.py  error_handler.py  exceptions.py  file_merger.py  logger.py  startup_cleaner.py  temp_file_manager.py  websocket_broadcaster.py
plugins/funasr/: async_task_manager.py  main.py
plugins/slides_extractor/: main.py  mode_frame.py  pdf_compositor.py  significant_frame.py  taskbar_detector.py
plugins/whisper/: async_task_manager.py  main.py
templates/: index.html  login.html
templates/partials/: task_list.html  video_list.html
